<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:fillViewport="false"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <include layout="@layout/app_bar"

                android:id="@+id/appbar"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Bank Account"
                android:id="@+id/textView4"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:typeface="monospace" />
        </RelativeLayout>


        <!--
                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="right" />
        -->



        <LinearLayout
            android:id="@+id/edit_text_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:orientation="vertical"
            android:padding="2.0dip"
            android:layout_above="@+id/login_button">

            <Spinner
                android:id="@+id/onchosiesbasicaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:hint="Catagory"
                android:singleLine="true"
                android:spinnerMode="dialog" />
            <Spinner
                android:id="@+id/whattypeofstudies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:hint="Catagory"
                android:singleLine="true"
                android:spinnerMode="dialog" />
            <!--  <Spinner
                  android:id="@+id/department_versions"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10.0dip"
                  android:layout_marginTop="10.0dip"
                  android:hint="Department"
                  android:singleLine="true"
                  android:spinnerMode="dialog" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameofunviversitylayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/nameofunviversity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameofunviversity"
                    android:inputType="text"

                    android:singleLine="true" />



            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/towncitylayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/towncity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/towncity"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/postcodelayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/postcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postcode"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:hint="@string/Email"
                android:inputType="text"
                android:singleLine="true" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="I already have a  bank account"
                android:id="@+id/switch1"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"
                android:layout_marginTop="10.0dip"
                android:checked="false"
                android:typeface="monospace" />


            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="false">
                <LinearLayout
                    android:id="@+id/sdr"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"
                    android:padding="2.0dip"
                    android:layout_above="@+id/switch1"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Namelayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >



                        <EditText
                            android:id="@+id/Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20.0dip"
                            android:hint="@string/Name"
                            android:inputType="text"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/dateofbrithlayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/dateofbrith"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10.0dip"
                            android:hint="@string/DateofBrith"
                            android:inputType="text"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Nationalitylayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/Nationality"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10.0dip"
                            android:hint="@string/Nationality"
                            android:inputType="text"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Emaillayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mobilelayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10.0dip"
                            android:hint="@string/Telephone"
                            android:inputType="text"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </ScrollView>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="Register"
                android:layout_marginTop="15dp"
                android:id="@+id/Register"
                android:background="#4285fa"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:text="facebook"
                android:layout_marginTop="15dp"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>

